--- a/style.css
+++ b/style.css
@@ -124,3 +124,9 @@ body{
 .create-link:hover{
     text-decoration: underline;
 }
+.footer{
+    margin-top: 192px;
+    margin-left: -30px;
+    color: #737373;
+    font-size: 13px;
+}
